CATTY-655 Rewrite LaunchScreen

--- a/src/Catty/Storyboard+XIB/LaunchScreen.storyboard
+++ b/src/Catty/Storyboard+XIB/LaunchScreen.storyboard
@@ -1,79 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vwt-6C-EYF">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Pocket Code-->
-        <scene sceneID="mFP-py-AC1">
+        <!--View Controller-->
+        <scene sceneID="EHf-IW-A2E">
             <objects>
-                <navigationController title="Pocket Code" id="vwt-6C-EYF" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mk2-tc-ao1">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.094117647058823528" green="0.6470588235294118" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="tintColor" red="0.6588235294" green="0.87450980389999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" red="0.094117647058823528" green="0.6470588235294118" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.67843137249999996" green="0.93333333330000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </textAttributes>
-                        <navigationBarAppearance key="standardAppearance">
-                            <color key="backgroundColor" red="0.094117647058823528" green="0.6470588235294118" blue="0.72156862745098038" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <textAttributes key="titleTextAttributes">
-                                <color key="textColor" red="0.67843137249999996" green="0.93333333330000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </textAttributes>
-                        </navigationBarAppearance>
-                        <navigationBarAppearance key="scrollEdgeAppearance">
-                            <color key="backgroundColor" red="0.094117647060000004" green="0.64705882349999999" blue="0.72156862749999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <textAttributes key="titleTextAttributes">
-                                <color key="textColor" red="0.67843137249999996" green="0.93333333330000001" blue="0.94117647059999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </textAttributes>
-                        </navigationBarAppearance>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="dcr-Oh-Rg1" kind="relationship" relationship="rootViewController" id="srZ-ng-hUR"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="yEe-JO-Hqk" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="44" y="374"/>
-        </scene>
-        <!--Pocket Code-->
-        <scene sceneID="e39-8H-d31">
-            <objects>
-                <viewController id="dcr-Oh-Rg1" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="uYB-xZ-B4b"/>
-                        <viewControllerLayoutGuide type="bottom" id="JM2-42-yL4"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9ab-O8-5d3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <viewController id="01J-lp-oVM" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (C) 2010-2022 The Catrobat Team" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="6ac-A4-f6Q">
-                                <rect key="frame" x="26" y="626.5" width="323" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2010-2022 The Catrobat Team" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="GOe-kj-MQh">
+                                <rect key="frame" x="20" y="821.5" width="374" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.6588235294" green="0.87450980389999999" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="textColor" red="0.094117647060000004" green="0.64705882349999999" blue="0.72156862749999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Document-Icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="Vps-wX-3jb">
+                                <rect key="frame" x="50" y="-64" width="314" height="1024"/>
+                            </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="tintColor" red="0.094117647058823528" green="0.6470588235294118" blue="0.71764705882352942" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="JM2-42-yL4" firstAttribute="top" secondItem="6ac-A4-f6Q" secondAttribute="bottom" constant="20" id="0J2-vl-epK"/>
-                            <constraint firstItem="6ac-A4-f6Q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="9ab-O8-5d3" secondAttribute="leadingMargin" constant="10" id="PFc-Kh-mQx"/>
-                            <constraint firstAttribute="trailingMargin" relation="greaterThanOrEqual" secondItem="6ac-A4-f6Q" secondAttribute="trailing" constant="10" id="SZk-Ij-4Gd"/>
-                            <constraint firstAttribute="centerX" secondItem="6ac-A4-f6Q" secondAttribute="centerX" id="epA-g0-aYK"/>
+                            <constraint firstItem="GOe-kj-MQh" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="20" id="6UV-o6-DYy"/>
+                            <constraint firstItem="GOe-kj-MQh" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="-20" id="Ead-X9-AXk"/>
+                            <constraint firstItem="GOe-kj-MQh" firstAttribute="bottom" secondItem="Bcu-3y-fUS" secondAttribute="bottom" constant="-20" id="LKr-TB-Dtk"/>
+                            <constraint firstItem="Vps-wX-3jb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Mls-SZ-X7S"/>
+                            <constraint firstItem="Vps-wX-3jb" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="50" id="TSU-j7-EnR"/>
+                            <constraint firstItem="Vps-wX-3jb" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailing" constant="-50" id="aGK-aE-5Wh"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Pocket Code" id="FNU-Hn-l0R"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Wee-eI-RD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="834" y="325"/>
+            <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Document-Icon.png" width="1024" height="1024"/>
+    </resources>
 </document>
